<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    <RelativeLayout
        android:id="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/pacman_title"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_original_name"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/title"
        android:text="@string/original_name"
        android:textColor="@color/text"
        android:textAlignment="center"
        android:textSize="30sp"
        android:fontFamily="@font/pixelar"
        />
    <TextView
        android:id="@+id/tv_company"
        android:layout_below="@+id/tv_original_name"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/original_idea"
        android:textColor="@color/text"
        android:textAlignment="center"
        android:textSize="30sp"
        android:fontFamily="@font/pixelar"
        />
    <TextView
        android:id="@+id/tv_creation_year"
        android:layout_below="@+id/tv_company"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/creation_year"
        android:textColor="@color/text"
        android:textAlignment="center"
        android:textSize="30sp"
        android:fontFamily="@font/pixelar"
        />
    <TextView
        android:id="@+id/tv_clasification_us"
        android:layout_below="@+id/tv_creation_year"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/calification_us"
        android:textColor="@color/text"
        android:textAlignment="center"
        android:textSize="30sp"
        android:fontFamily="@font/pixelar"
        />

    <TextView
        android:id="@+id/tv_clasification_eu"
        android:layout_below="@+id/tv_clasification_us"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/calification_eu"
        android:textColor="@color/text"
        android:textAlignment="center"
        android:textSize="30sp"
        android:fontFamily="@font/pixelar"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_clasification_eu"
        android:layout_above="@id/tv_production"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >
        <ImageView
            android:id="@+id/iv_blue_ghost"
            android:layout_marginTop="10dp"
            android:layout_width="130dp"
            android:layout_height="120dp"
            android:foregroundGravity="center"
            android:src="@drawable/ghost_inky_right0"
            />

        <ImageView
            android:id="@+id/iv_yellow_ghost"
            android:layout_toRightOf="@id/iv_blue_ghost"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="50dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ghost_clyde_left1"
            />

        <ImageView
            android:id="@+id/iv_red_ghost"
            android:layout_below="@id/iv_yellow_ghost"
            android:layout_toRightOf="@id/iv_blue_ghost"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="50dp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ghost_blinky_left0"
            />

        <ImageView
            android:id="@+id/iv_pink_ghost"
            android:layout_below="@id/iv_blue_ghost"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ghost_pinky_right1"
            />

    </RelativeLayout>


    <TextView
        android:id="@+id/tv_production"
        android:layout_marginBottom="40dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/production"
        android:textColor="#FFFFFFFF"
        android:textAlignment="center"
        android:textSize="22sp"
        android:fontFamily="@font/pixelar"
        />

</RelativeLayout>